<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.authentication.ForgotPasswordFragment">

    <ImageButton
        android:id="@+id/iv_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/BackArrowImageStyle" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/title_text_forgot_password"
        style="@style/ScreenTitleAuthenticationStyle" />

    <EditText
        android:id="@+id/edt_email"
        style="@style/CreateAccountEditText"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_enter_register_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/login_component_start_margin"
        android:layout_marginEnd="@dimen/login_component_end_margin"
        android:layout_marginTop="@dimen/_30sdp"
        style="@style/DodgerBlueButtonStyle"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_send"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_send">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_remember_password"
            android:textColor="@color/daintree"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/roboto_medium"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textColor="@color/theme_color"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/roboto_medium"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>