<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_config_wifi_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="contentDescription,Autofill,LabelFor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_panel_name"
        android:textColor="@color/daintree"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/edt_panel_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/screen_end_margin"
        android:background="@drawable/catskill_white_background"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_text_enter_panel_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/daintree"
        android:textColorHint="@color/ghost"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_wifi_ssid"
        android:textColor="@color/daintree"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/edt_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/screen_end_margin"
        android:background="@drawable/catskill_white_background"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_text_wifi_ssid"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="50"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/daintree"
        android:textColorHint="@color/ghost"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_password"
        android:textColor="@color/daintree"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/edt_wifi_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/screen_end_margin"
        android:background="@drawable/catskill_white_background"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_text_wifi_password"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="50"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/daintree"
        android:textColorHint="@color/ghost"
        android:textSize="@dimen/_12ssp" />

    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/screen_end_margin"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@color/dodger_blue"
        android:gravity="center"
        android:orientation="horizontal"
        app:corner_radius="@dimen/corner_radius_6dp">

        <ImageView
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:src="@drawable/ic_save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/button_text_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

</LinearLayout>