<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.authentication.CreateAccountFragment">

    <ImageButton
        android:id="@+id/iv_back"
        style="@style/BackImageStyle" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_text_create_account"
        style="@style/ScreenTitleAuthenticationStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_full_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_component_height"
                style="@style/CreateAccountCardView"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/edt_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CreateAccountEditText"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_full_name" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_component_height"
                style="@style/CreateAccountCardView"
                app:layout_constraintTop_toBottomOf="@+id/card_full_name">

                <EditText
                    android:id="@+id/edt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CreateAccountEditText"
                    android:inputType="text"
                    android:hint="@string/hint_user_name" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_phone_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_component_height"
                style="@style/CreateAccountCardView"
                app:layout_constraintTop_toBottomOf="@+id/card_user_name">

                <EditText
                    android:id="@+id/edt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CreateAccountEditText"
                    android:inputType="phone"
                    android:hint="@string/hint_phone_number" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_component_height"
                style="@style/CreateAccountCardView"
                app:layout_constraintTop_toBottomOf="@+id/card_phone_number">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CreateAccountEditText"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_text_email" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_component_height"
                style="@style/CreateAccountCardView"
                app:layout_constraintTop_toBottomOf="@+id/card_email">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CreateAccountEditText"
                    android:inputType="textPassword"
                    android:hint="@string/hint_text_password" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_component_height"
                style="@style/CreateAccountCardView"
                app:layout_constraintTop_toBottomOf="@+id/card_password">

                <EditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CreateAccountEditText"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirm_password" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_component_height"
                android:layout_marginStart="@dimen/login_component_start_margin"
                android:layout_marginEnd="@dimen/login_component_end_margin"
                android:layout_marginTop="@dimen/_30sdp"
                app:cardBackgroundColor="@color/theme_color"
                app:cardElevation="0dp"
                app:cardCornerRadius="@dimen/_6sdp"
                app:layout_constraintTop_toBottomOf="@+id/card_confirm_password">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textAllCaps="false"
                    android:letterSpacing="0"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/text_sign_up" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/_20sdp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/card_sign_up">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_already_have_account"
                    android:textColor="@color/daintree"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_medium"/>

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login"
                    android:textColor="@color/theme_color"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_medium"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>