<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:visibility="gone"
    tools:ignore="contentDescription,Autofill,LabelFor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_panel_name"
        android:textColor="@color/daintree"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/edt_panel_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/screen_end_margin"
        android:background="@drawable/catskill_white_background"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/hint_text_enter_panel_name"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/daintree"
        android:textColorHint="@color/ghost"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/text_serial_number"
        android:textColor="@color/daintree"
        android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/edt_serial_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/screen_end_margin"
        android:background="@drawable/catskill_white_background"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/hint_text_enter_serial_number"
        android:inputType="text"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/theme_color"
        android:textColorHint="@color/ghost"
        android:textSize="@dimen/_12ssp"
        tools:ignore="TextFields" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_component_height"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/screen_end_margin"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/dodger_blue_background_6dp_corner"
        android:text="@string/button_text_add_room"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:backgroundTint="@null" />

</LinearLayout>